<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#BDBDBD">

    <TextView
        android:id="@+id/textView"
        android:layout_width="44dp"
        android:layout_height="46dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/boy"
        android:textSize="18sp"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/boyunuzu_giriniz"
        android:textSize="18sp" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="212dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="91dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="48dp"
        android:layout_height="41dp"
        android:layout_alignStart="@+id/textView"
        android:layout_alignTop="@+id/seekBar"
        android:text="@string/kilo"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_alignLeft="@+id/textView"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="216dp"
        android:layout_height="34dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="86dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="157dp"
        android:gravity="center"
        android:hint="@string/kilonuz"
        android:textSize="18sp"
        tools:ignore="RtlCompat" />

    <RadioGroup
        android:layout_width="216dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="211dp">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="213dp"
        android:text="@string/cinsiyet"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_alignLeft="@+id/textView"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="171dp"
        android:gravity="center"
        android:text="@string/hesapla"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginBottom="91dp"
        android:text="@string/ideal_kilo"
        android:textSize="18sp"
        android:layout_alignLeft="@+id/textView"
        tools:ignore="RtlCompat"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="67dp"
        android:layout_height="41dp"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/durum"
        android:textSize="18sp"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textsonn"
        android:layout_width="209dp"
        android:layout_height="47dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView5"
        android:layout_marginLeft="102dp"
        android:layout_marginStart="102dp"
        android:gravity="center"
        android:hint="@string/ideal_kilonuz"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textson"
        android:layout_width="209dp"
        android:layout_height="39dp"
        android:layout_alignStart="@+id/textsonn"
        android:layout_alignTop="@+id/textView6"
        android:gravity="center"
        android:hint="@string/durumunuz"
        android:textSize="18sp"
        android:layout_alignLeft="@+id/textsonn"
        tools:ignore="RtlCompat" />


</RelativeLayout>